postcss/testData/inspections/customSelectors/emptyCustomSelector.pcss
@custom-selector <error descr="Custom selector name expected"><error descr="valid token expected">@</error></error>:--button h1;